--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 /resources/docs/resume.pdf
 /resources/docs/cv.pdf
 /resources/docs/r_parker.pdf
+
+# Jekyll build files
+_site/
+.jekyll-cache/
+.sass-cache/
+Gemfile.lock
